--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+	<!-- the link to home and about us shows on every page now! -->
+	<%= link_to "Home", root_path %>
+	<%= link_to "About Us", about_path %>	
+	<%= yield %>
 
 </body>
 </html>
