--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
-<h1>Welcome to Pinteresting</h1>
-<!-- <small>Find me in app/views/pages/home.html.erb, I'm set now as a new root on routes.rb</small> -->
+<div class="jumbotron">
+	<h1>Welcome to Pinteresting</h1>
+	<!-- <small>Find me in app/views/pages/home.html.erb, I'm set now as a new root on routes.rb</small> -->
+	<!-- embedded ruby (link) -->
+	<p>Click here to <%= link_to "Sign Up", "#", class:"btn btn-primary btn-lg" %></p>
+</div>
 
-<!-- embedded ruby (link) -->
-<p>sign up <%= link_to "here", "#" %></p>
   
