--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,3 +1,9 @@
+$body-bg: #2c3e50;
+$navbar-default-bg: #e67e22;
+$navbar-default-link-color: #FFF;
+$navbar-default-link-hover-color: #7f8c8d;
+$headings-color: #ecf0f1;
+
 @import 'bootstrap';
 
 
