--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,9 +1,9 @@
-.jumbotron
+.jumbotron.center
   h1 Welcome to Pinteresting
   /! <small>Find me in app/views/pages/home.html.erb, I'm set now as a new root on routes.rb</small
   /! embedded ruby (link)
   p
-    | Click here to #{link_to "Sign Up", "#", class:"btn btn-primary btn-lg"}
-
-
+  	=link_to "Login", "#", class:"btn btn-primary btn-lg" 
+	p
+		=link_to "Sign Up", "#", class:"btn btn-danger btn-lg"
   
