--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -1,1 +1,13 @@
-h1 Who we Are?
+.jumbotron.about.center
+	h1 Hi! nice to meet you.
+	p 
+		|Hi there, my name is Israel, I am a front-end developer.
+		br I'm currently working for a startup company called 
+		=link_to "Hiplogiq", "http://www.hiplogiq.com" 
+	p 
+		|I am passionate about web technology and I'm always trying to learn new things.
+		br 
+		|Did I mentioned I used to be an Optometrist? yeah crazy right?
+		
+	p 
+		=image_tag('profile.png', :alt=> 'image', :width => 200, :height => 200)
