--- a/app/views/pages/contact_us.html.slim
+++ b/app/views/pages/contact_us.html.slim
@@ -1,6 +1,5 @@
-h1 We are here to help!
-
-.jumbotron
+.jumbotron.contact
+  h2 We are here to help!
   form.center-block role="form" 
     .form-group
       label for="yourFirstName" First Name:
