--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,4 +1,4 @@
-.jumbotron.center
+.jumbotron.home.center
   h1 Welcome to Pinteresting
   /! <small>Find me in app/views/pages/home.html.erb, I'm set now as a new root on routes.rb</small
   /! embedded ruby (link)
