--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -18,5 +18,5 @@ nav.navbar.navbar-static-top.navbar-default.carrot role="navigation"
           /! important to notice the method: :delete needs to be added
           li= link_to "Log Out", destroy_user_session_path, method: :delete
         - else 
-          li= link_to "Sign In", new_user_session_path  
+          li= link_to "Login", new_user_session_path  
    
