--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -3,8 +3,7 @@
   - if user_signed_in? 
   	p Hello there!
   - else
-		/ p
-		/ 	=link_to "Login", new_user_session_path, class:"btn btn-primary btn-lg" 
+		p.call-to-action Sign Up for a New Account Today!
 		p
 			=link_to "Sign Up", new_user_registration_path, class:"btn btn-danger btn-lg"
  
