--- a/app/views/pages/contact_us.html.slim
+++ b/app/views/pages/contact_us.html.slim
@@ -11,5 +11,5 @@
       label for="yourMessage" Your Message:
       textarea class="form-control" rows="3"
     .form-group  
-      button type="submit" class="btn btn-default" Send
+      button type="submit" class="btn btn-primary" Send
 
