--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -10,7 +10,9 @@ $emphasis-color: #d9534f;
 h1,h2,h3,h4,h5,h6{
 	color: #000;
 }
-
+.actions{
+	margin-top: 10px;
+}
 .center{
 	text-align: center;
 }
@@ -31,6 +33,13 @@ h1,h2,h3,h4,h5,h6{
 }
 .call-to-action{
 	color: $emphasis-color;
+}
+td.pin-show{
+	padding-right: 5px;
+}
+th.pin-label{
+	text-align: center;
+	padding-right: 20px;
 }
 
 
