--- a/app/views/pins/show.html.slim
+++ b/app/views/pins/show.html.slim
@@ -7,6 +7,6 @@
 		  strong Description:
 		  = @pin.description
 	.panel-footer
-		= link_to 'Edit', edit_pin_path(@pin), class: "btn btn-primary"
-		'
+		- if @pin.user == current_user
+			= link_to 'Edit', edit_pin_path(@pin), class: "btn btn-primary"
 		= link_to 'Back', pins_path, class: "btn btn-default"
