--- a/app/views/pins/_form.html.slim
+++ b/app/views/pins/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @pin do |f|
+= form_for @pin, html: {multipart: true} do |f|
   - if @pin.errors.any?
     #error_explanation
       h2 = "#{pluralize(@pin.errors.count, "error")} prohibited this pin from being saved:"
@@ -6,9 +6,15 @@
         - @pin.errors.full_messages.each do |message|
           li = message
 
+  / this creates the file upload section for the image
+  .field
+    = f.label :image
+    = f.file_field :image, class: "form-control"
+  
+  br
+
   .field
     = f.label :description
-    br
-    = f.text_field :description
+    = f.text_field :description, class: "form-control"  
 
-  .actions = f.submit 'Save', class: "btn btn-primary"
+  .actions = f.submit 'Create Pin', class: "btn btn-primary"
