--- a/app/views/pins/index.html.slim
+++ b/app/views/pins/index.html.slim
@@ -6,6 +6,7 @@
     table
       thead
         tr
+          th.pin-label Image
           th.pin-label Description
           th.pin-label User
           th
@@ -15,6 +16,7 @@
       tbody
         - @pins.each do |pin|
           tr
+            td.pin-show = image_tag pin.image.url(:thumb)
             td.pin-show = pin.description
             td.pin-show = pin.user.email if pin.user
             td.pin-show = link_to 'Show', pin_path(pin)
