added styles to images and action links

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -55,6 +55,12 @@ p.pin-label{
 		width: 100%;
 	}
 }
+.main-pin{
+	img{
+		border-radius: 10px;
+		box-shadow: 0 0 15px 5px rgba(0,0,0,0.7);
+	}
+}
 
 
 
