--- a/app/views/pins/index.html.slim
+++ b/app/views/pins/index.html.slim
@@ -1,28 +1,3 @@
-/ .panel.panel-default.listing-pins
-/   .panel-heading
-/     h1 Listing pins
-  
-/   .panel-body
-/     table
-/       thead
-/         tr
-/           th.pin-label Image
-/           th.pin-label Description
-/           th.pin-label User
-/           th
-/           th
-/           th
-
-/       tbody
-/         - @pins.each do |pin|
-/           tr
-/             td.pin-show = image_tag pin.image.url(:thumb)
-/             td.pin-show = pin.description
-/             td.pin-show = pin.user.email if pin.user
-/             td.pin-show = link_to 'Show', pin_path(pin)
-/             - if pin.user == current_user
-/               td.pin-show = link_to 'Edit', edit_pin_path(pin)
-/               td.pin-show = link_to 'Delete', pin, data: {:confirm => 'Are you sure?'}, :method => :delete
 div#pins.transitions-enabled
   - @pins.each do |pin|
     div.box.panel.panel-default
@@ -30,10 +5,16 @@ div#pins.transitions-enabled
       .panel-body
         p.pin-show = pin.description
         p.pin-show = pin.user.email if pin.user
-        = link_to 'Show', pin_path(pin), class: "btn btn-primary"
+        = link_to pin_path(pin) do
+          span.glyphicon.glyphicon-eye-open 
+            | Show
         - if pin.user == current_user
-          = link_to 'Edit', edit_pin_path(pin), class: "btn btn-default"
-          = link_to 'Delete', pin, data: {:confirm => 'Are you sure?'}, :method => :delete, class: "btn btn-danger"
+          = link_to edit_pin_path(pin) do
+            span.glyphicon.glyphicon-edit 
+            | Edit
+          = link_to pin, data: {:confirm => 'Are you sure?'}, :method => :delete do
+            span.glyphicon.glyphicon-trash 
+            | Delete
 
 
 
