--- a/app/views/pins/index.html.slim
+++ b/app/views/pins/index.html.slim
@@ -1,3 +1,4 @@
+= render 'pages/home' unless user_signed_in?
 div#pins.transitions-enabled
   - @pins.each do |pin|
     div.box.panel.panel-default
