--- a/app/views/pins/index.html.slim
+++ b/app/views/pins/index.html.slim
@@ -16,8 +16,9 @@ div#pins.transitions-enabled
           = link_to pin, data: {:confirm => 'Are you sure?'}, :method => :delete do
             span.glyphicon.glyphicon-trash 
             | Delete
-
-
+div.center
+  / the bootstrap gem file needs to pass this rederer to work
+  = will_paginate @posts, renderer: BootstrapPagination::Rails
 
 
 
